Cocktail Form p1, DTO's : enum -> string. CocktailsController.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
@@ -26,6 +26,15 @@
           <a class="dropdown-item" routerLink="/drinks/create">Create Drink</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Cocktails
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" routerLink="/cocktails">Cocktails List</a>
+          <a class="dropdown-item" routerLink="/cocktails/create">Create Cocktail</a>
+        </div>
+      </li>
     </ul>
     <app-login-menu></app-login-menu>
   </div>
