--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-form/cocktail-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-form/cocktail-form.component.html
@@ -43,77 +43,90 @@
         </div>
 
         <div class="mt-3">
-            <button type="button" (click)="addIngredientClick()" class="btn btn-primary">Add ingredient</button>
+            <button type="button" (click)="addIngredientClick()" [disabled]="cocktailForm.get('ingredients').invalid" class="btn btn-primary">Add ingredient</button>
         </div>
 
         <div formArrayName="ingredients"
             *ngFor="let ingredient of cocktailForm.get('ingredients')['controls']; let i = index">
             <div [formGroupName]="i">
 
-                <div class="form-group">
-                    <label [attr.for]="'componentName'+i">Component</label>
-                    <input type="text" autocomplete="off" (blur)="validateFormValue()" [ngClass]="{
+                <hr *ngIf="i>0">
+
+                <div class="row justify-content-start">
+
+                    <input type="hidden" [id]="'ingredientId'+i" formControlName="ingredientId" [value]="ingredient.get('ingredientId').value"/>
+
+                    <div class="form-group col-md-4">
+                        <label [attr.for]="'componentName'+i">Component</label>
+                        <input type="text" autocomplete="off" (blur)="validateFormValue()" [ngClass]="{
                             'is-valid': ingredient.get('componentName').valid && ingredient.get('componentName').touched,
                             'is-invalid': ingredient.get('componentName').invalid && ingredient.get('componentName').touched
                         }" class="form-control col-sm-6" [id]="'componentName'+i" formControlName="componentName"
-                        placeholder="Select component" list="components">
+                            placeholder="Select component" list="components">
 
-                    <datalist id="components">
-                        <option *ngFor="let c of componentList" [value]="c.name">{{c.name}}</option>
-                    </datalist>
+                        <datalist id="components">
+                            <option *ngFor="let c of componentList" [value]="c.name">{{c.name}}</option>
+                        </datalist>
 
-                    <div class="invalid-feedback" *ngIf="ingredient.get('componentName').errors?.required">
-                        Component is required.
+                        <div class="invalid-feedback" *ngIf="ingredient.get('componentName').errors?.required">
+                            Component is required.
+                        </div>
+                        <div class="invalid-feedback" *ngIf="ingredient.get('componentName').errors?.componentError">
+                            Component not found.
+                        </div>
+                        <div class="valid-feedback" *ngIf="!ingredient.get('componentName').errors">
+                            Looks good!
+                        </div>
                     </div>
-                    <div class="invalid-feedback" *ngIf="ingredient.get('componentName').errors?.componentError">
-                        Component not found.
-                    </div>
-                    <div class="valid-feedback" *ngIf="!ingredient.get('componentName').errors">
-                        Looks good!
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <label [attr.for]="'proportionType'+i">Proportion Type</label>
-                    <select (blur)="validateFormValue()" [ngClass]="{
+                    <div class="form-group col-md-4">
+                        <label [attr.for]="'proportionType'+i">Proportion Type</label>
+                        <select (blur)="validateFormValue()" [ngClass]="{
                             'is-valid':ingredient.get('proportionType').valid && ingredient.get('proportionType').touched,
                             'is-invalid': ingredient.get('proportionType').invalid && ingredient.get('proportionType').touched
                         }" class="form-control col-sm-6" [id]="'proportionType'+i" formControlName="proportionType"
-                        placeholder="Enter proportion type">
+                            placeholder="Enter proportion type">
 
-                        <option *ngFor="let pt of proportionTypeArray" [value]="pt">{{pt}}</option>
-                        <option value="" selected>Select Proportion Type</option>
+                            <option *ngFor="let pt of proportionTypeArray" [value]="pt">{{pt}}</option>
+                            <option value="" selected>Select Proportion Type</option>
 
-                    </select>
-                    <div class="invalid-feedback" *ngIf="ingredient.get('proportionType').errors?.required">
-                        Proportion type is required.
+                        </select>
+                        <div class="invalid-feedback" *ngIf="ingredient.get('proportionType').errors?.required">
+                            Proportion type is required.
+                        </div>
+                        <div class="valid-feedback" *ngIf="!ingredient.get('proportionType').errors">
+                            Looks good!
+                        </div>
                     </div>
-                    <div class="valid-feedback" *ngIf="!ingredient.get('proportionType').errors">
-                        Looks good!
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="'proportionValue'+i">Proportion Value</label>
-                    <input (blur)="validateFormValue()" autocomplete="off" [ngClass]="{
+                    <div class="form-group col-md-3">
+                        <label for="'proportionValue'+i">Proportion Value</label>
+                        <input (blur)="validateFormValue()" autocomplete="off" [ngClass]="{
                         'is-valid':ingredient.get('proportionValue').valid && ingredient.get('proportionValue').touched,
                         'is-invalid': ingredient.get('proportionValue').invalid && ingredient.get('proportionValue').touched
-                    }" type="number" class="form-control col-sm-6" [id]="'proportionValue'+i"
-                        formControlName="proportionValue" placeholder="Enter proportion value">
-                    <div class="invalid-feedback" *ngIf="ingredient.get('proportionValue').errors?.required">
-                        Proportion value is required.
+                    }" type="number" min="0" max="10000" class="form-control col-sm-6" [id]="'proportionValue'+i"
+                            formControlName="proportionValue" min="0" placeholder="Enter value">
+                        <div class="invalid-feedback" *ngIf="ingredient.get('proportionValue').errors?.required">
+                            Proportion value is required.
+                        </div>
+                        <div class="invalid-feedback" *ngIf="ingredient.get('proportionValue').errors?.min">
+                            Min value: 0.
+                        </div>
+                        <div class="invalid-feedback" *ngIf="ingredient.get('proportionValue').errors?.max">
+                            Max value: 10000.
+                        </div>
+                        <div class="valid-feedback" *ngIf="!ingredient.get('proportionValue').errors">
+                            Looks good!
+                        </div>
                     </div>
-                    <div class="invalid-feedback" *ngIf="ingredient.get('proportionValue').errors?.min">
-                        Min value: 0.
-                    </div>
-                    <div class="invalid-feedback" *ngIf="ingredient.get('proportionValue').errors?.max">
-                        Max value: 10000.
-                    </div>
-                    <div class="valid-feedback" *ngIf="!ingredient.get('proportionValue').errors">
-                        Looks good!
+                    <div class="form-group col-md-1" *ngIf="cocktailForm.get('ingredients').length>1">
+                        <label for="'btn'+i">Del Ingr</label>
+                        <button type="button" class="btn btn-danger"
+                            (click)="RemoveIngredient(i)">
+                            <span>X</span>
+                        </button>
                     </div>
                 </div>
-
             </div>
         </div>
 
