--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/meals/meal-form/meal-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/meals/meal-form/meal-form.component.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <label for="pricePerGr">Price Per Gram</label>
         <input (blur)="validateFormValue()" autocomplete="off" [class.is-invalid]="formErrors.pricePerGr"
-          [class.is-valid]="mealForm.controls.pricePerGr.valid" type="number" class="form-control col-sm-6" id="pricePerGr"
+          [class.is-valid]="mealForm.controls.pricePerGr.valid" type="number" class="form-control col-sm-6" id="pricePerGr" min="0" max="10000"
           formControlName="pricePerGr" placeholder="Enter price per gram">
         <div class="invalid-feedback" *ngIf="formErrors.pricePerGr">
           {{formErrors.pricePerGr}}
