--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-form/cocktail-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-form/cocktail-form.component.html
@@ -89,7 +89,6 @@
 
                             <option *ngFor="let pt of proportionTypeArray" [value]="pt">{{pt}}</option>
                             <option value="" selected>Select Proportion Type</option>
-
                         </select>
                         <div class="invalid-feedback" *ngIf="ingredient.get('proportionType').errors?.required">
                             Proportion type is required.
@@ -119,7 +118,7 @@
                             Looks good!
                         </div>
                     </div>
-                    <div class="form-group col-md-1" *ngIf="cocktailForm.get('ingredients').length>1">
+                    <div class="form-group col-md-1">
                         <label for="'btn'+i">Del Ingr</label>
                         <button type="button" class="btn btn-danger"
                             (click)="RemoveIngredient(i)">
