--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-details/cocktail-details.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-details/cocktail-details.component.html
@@ -1,1 +1,34 @@
-<p>cocktail-details works!</p>
+<div *ngIf="cocktail && componentList" class="mt-3">
+    <div class="col">
+        <a class="btn btn-primary btn-lg m-2" [routerLink]="['/cocktails/edit', cocktail.id]">Edit Cocktail</a>
+        <a class="btn btn-primary btn-lg m-2" routerLink="/cocktails">Back To List</a>
+        <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
+    </div>
+    <div class="jumbotron jumbotron-fluid mt-2">
+        <div class="container">
+            <h1 class="display-4">Cocktail Details</h1>
+            <div class="row">
+                <img *ngIf="cocktail.photoPath != null" [src]="cocktail.photoPath" alt="No Img"
+                    class="image-limiter col-6" />
+                <div class="col-6">
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-secondary"><strong>Name:</strong> {{cocktail.name}}
+                        </li>
+                        <li class="list-group-item list-group-item-secondary"><strong>Type:</strong>
+                            {{cocktail.cocktailType}}</li>
+                    </ul>
+                    <p class="text-center mt-2"><strong>Ingredients:</strong></p>
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-secondary"
+                            *ngFor="let ingredient of cocktail.ingredients">
+                            <strong>{{ingredient.drink? ingredient.drink.name : ingredient.meal.name}}:</strong>
+                            {{ingredient.proportionValue}}
+                            {{ingredient.proportionType}}</li>
+                    </ul>
+                </div>
+            </div>
+            <h4 class="text">Description:</h4>
+            <p class="lead">{{cocktail.description}}</p>
+        </div>
+    </div>
+</div>
