--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
@@ -1,11 +1,13 @@
 <div *ngIf="brands" class="mt-3">
     <form [formGroup]="drinkFilterForm" (ngSubmit)="onSubmit()">
         <div class="justify-content-start row">
+
             <div class="form-group m-2 col-md-3">
                 <label for="name">Name</label>
                 <input autocomplete="off" type="text" class="form-control" id="name" formControlName="name"
                     placeholder="Enter drink name">
             </div>
+
             <div class="form-group m-2 col-md-3">
                 <label for="alcoholType">Alcohol Type</label>
                 <input autocomplete="off" type="text" class="form-control" id="alcoholType" list="alcoholTypes"
@@ -14,6 +16,23 @@
                     <option *ngFor="let alcoholType of alcoholTypesArray" [value]="alcoholType"></option>
                 </datalist>
             </div>
+
+            <div class="form-group col-md-5">
+                <label for="flavor">Flavor (Description)</label>
+                <textarea autocomplete="off" class="form-control" id="flavor" formControlName="flavor"
+                    placeholder="Enter drink flavor"></textarea>
+            </div>
+        </div>
+
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample"
+            aria-expanded="false" aria-controls="collapseExample">
+            Show More Filter Options
+        </button>
+
+        <div class="collapse" id="collapseExample">
+
+            <div class="row justify-content-start">
+
             <div class="form-group m-2 col-md-3">
                 <label for="brandId">Brand</label>
                 <select class="form-control" id="brandId" formControlName="brandId" placeholder="Enter brand">
@@ -21,29 +40,31 @@
                     <option value="" selected>Select A Brand</option>
                 </select>
             </div>
-
             <div class="form-group m-2 col-md-3">
                 <label for="alcoholPercentageMinValue">alc. % min</label>
-                <input autocomplete="off" type="number" min="0" max="100" [readonly]="drinkFilterForm.get('isNonAlcohol').value" class="form-control"
-                    id="alcoholPercentageMinValue" formControlName="alcoholPercentageMinValue" 
+                <input autocomplete="off" type="number" min="0" max="100"
+                    [readonly]="drinkFilterForm.get('isNonAlcohol').value" class="form-control"
+                    id="alcoholPercentageMinValue" formControlName="alcoholPercentageMinValue"
                     [value]="drinkFilterForm.get('isNonAlcohol').value ? 0 : drinkFilterForm.get('alcoholPercentageMinValue').value"
                     placeholder="Enter min %">
             </div>
 
             <div class="form-group m-2 col-md-3">
                 <label for="alcoholPercentageMaxValue">alc. % max</label>
-                <input autocomplete="off" type="number" min="0" max="100" [readonly]="drinkFilterForm.get('isNonAlcohol').value" class="form-control"
-                    id="alcoholPercentageMaxValue" formControlName="alcoholPercentageMaxValue" 
+                <input autocomplete="off" type="number" min="0" max="100"
+                    [readonly]="drinkFilterForm.get('isNonAlcohol').value" class="form-control"
+                    id="alcoholPercentageMaxValue" formControlName="alcoholPercentageMaxValue"
                     [value]="drinkFilterForm.get('isNonAlcohol').value ? 0 : drinkFilterForm.get('alcoholPercentageMaxValue').value"
                     placeholder="Enter max %">
             </div>
 
             <div class="form-check-inline">
-                <input class="form-check-input" type="checkbox" [value]="isNonAlcohol" formControlName="isNonAlcohol" id="isNonAlcohol">
+                <input class="form-check-input" type="checkbox" [value]="isNonAlcohol" formControlName="isNonAlcohol"
+                    id="isNonAlcohol">
                 <label class="form-check-label" for="isNonAlcohol">
-                  N/A
+                    N/A
                 </label>
-              </div>
+            </div>
 
             <div class="form-group m-2 col-md-3">
                 <label for="pricePerMl">Price Per Ml</label>
@@ -54,13 +75,8 @@
                 </select>
             </div>
         </div>
-        <div class="form-group col-md-6">
-            <label for="flavor">Flavor (Description)</label>
-            <textarea autocomplete="off" class="form-control" id="flavor" formControlName="flavor"
-                placeholder="Enter drink flavor"></textarea>
         </div>
+
     </form>
     <button class="btn btn-primary mt-2" (click)="clearForm()">Clear</button>
-    <p>{{drinkFilterForm.value | json}}</p>
-    <p>{{drinkFilterModel | json}}</p>
 </div>
