--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
@@ -17,7 +17,7 @@
                 </datalist>
             </div>
 
-            <div class="form-group col-md-5">
+            <div class="form-group m-2 col-md-5">
                 <label for="flavor">Flavor (Description)</label>
                 <textarea autocomplete="off" class="form-control" id="flavor" formControlName="flavor"
                     placeholder="Enter drink flavor"></textarea>
@@ -25,8 +25,8 @@
         </div>
 
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample"
-            aria-expanded="false" aria-controls="collapseExample">
-            Show More Filter Options
+            [aria-expanded]="isExpanded" aria-controls="collapseExample" (click)="toggleContent()">
+            {{title}} More Filter Options
         </button>
 
         <div class="collapse" id="collapseExample">
