--- a/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
@@ -44,6 +44,15 @@
           <a class="dropdown-item" routerLink="/cocktails/create">Create Cocktail</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tests
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" routerLink="/customTests">Tests List</a>
+          <a class="dropdown-item" routerLink="/customTests/create">Create Test</a>
+        </div>
+      </li>
     </ul>
     <app-login-menu></app-login-menu>
   </div>
