custom-test-form.component.html | design is so bad :(

--- a/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
@@ -49,8 +49,8 @@
           Tests
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" routerLink="/customTests">Tests List</a>
-          <a class="dropdown-item" routerLink="/customTests/create">Create Test</a>
+          <a class="dropdown-item" routerLink="/tests">Tests List</a>
+          <a class="dropdown-item" routerLink="/tests/create">Create Test</a>
         </div>
       </li>
     </ul>
