User must login to app to interact with it.

--- a/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="col mt-3">
+<div class="col mt-3" *ngIf="isAuthenticated">
     <div class="jumbotron-fluid">
         <h1 class="display-4">Help System</h1>
         <p class="lead">A great filter system that helps to find appropriate alcohol based on client needs.</p>
