--- a/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/navmenu/navmenu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="isAuthenticated">
   <a class="navbar-brand" routerLink="/" routerLinkActive="active">BartenderSupportSystem</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/brands">Brands List</a>
-          <a class="dropdown-item" routerLink="/brands/create">Create Brand</a>
+          <a class="dropdown-item" routerLink="/brands/create" *ngIf="isAdmin">Create Brand</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -23,7 +23,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/drinks">Drinks List</a>
-          <a class="dropdown-item" routerLink="/drinks/create">Create Drink</a>
+          <a class="dropdown-item" routerLink="/drinks/create" *ngIf="isAdmin">Create Drink</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/meals">Meals List</a>
-          <a class="dropdown-item" routerLink="/meals/create">Create Meal</a>
+          <a class="dropdown-item" routerLink="/meals/create" *ngIf="isAdmin">Create Meal</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -41,7 +41,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" routerLink="/cocktails">Cocktails List</a>
-          <a class="dropdown-item" routerLink="/cocktails/create">Create Cocktail</a>
+          <a class="dropdown-item" routerLink="/cocktails/create" *ngIf="isAdmin">Create Cocktail</a>
         </div>
       </li>
       <li class="nav-item dropdown">
