--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-details/cocktail-details.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-details/cocktail-details.component.html
@@ -1,34 +1,35 @@
 <div *ngIf="cocktail && componentList" class="mt-3">
-    <div class="col">
+    <div class="row justify-content-center">
         <a class="btn btn-primary btn-lg m-2" [routerLink]="['/cocktails/edit', cocktail.id]">Edit Cocktail</a>
         <a class="btn btn-primary btn-lg m-2" routerLink="/cocktails">Back To List</a>
         <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
     </div>
-    <div class="jumbotron jumbotron-fluid mt-2">
+    <div class="jumbotron jumbotron-fluid mt-3">
         <div class="container">
-            <h1 class="display-4">Cocktail Details</h1>
-            <div class="row">
-                <img *ngIf="cocktail.photoPath != null" [src]="cocktail.photoPath" alt="No Img"
-                    class="image-limiter col-6" />
-                <div class="col-6">
+            <h4 class="display-4 text-center">Cocktail</h4>
+            <div class="row justify-content-center mt-3">
+                <img *ngIf="cocktail.photoPath != null" [src]="cocktail.photoPath" alt="Loading image..."
+                    class="col-sm-12 col-md-4" />
+                <div class="col-sm-12 col-md-6">
+                    <p class="text-center mt-2"><strong>Details:</strong></p>
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-secondary"><strong>Name:</strong> {{cocktail.name}}
+                        <li class="list-group-item"><strong>Name:</strong> {{cocktail.name}}
                         </li>
-                        <li class="list-group-item list-group-item-secondary"><strong>Type:</strong>
+                        <li class="list-group-item"><strong>Type:</strong>
                             {{cocktail.cocktailType}}</li>
                     </ul>
                     <p class="text-center mt-2"><strong>Ingredients:</strong></p>
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-secondary"
-                            *ngFor="let ingredient of cocktail.ingredients">
+                        <li class="list-group-item" *ngFor="let ingredient of cocktail.ingredients">
                             <strong>{{ingredient.drink? ingredient.drink.name : ingredient.meal.name}}:</strong>
                             {{ingredient.proportionValue}}
-                            {{ingredient.proportionType}}</li>
+                            {{ingredient.proportionType}}
+                        </li>
                     </ul>
                 </div>
             </div>
-            <h4 class="text">Description:</h4>
-            <p class="lead">{{cocktail.description}}</p>
+            <h4 class="text-center mt-3">Description:</h4>
+            <p class="lead m-3">{{cocktail.description}}</p>
         </div>
     </div>
 </div>
