--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-filter/cocktail-filter.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/cocktails/cocktail-filter/cocktail-filter.component.html
@@ -1,18 +1,16 @@
 <div class="mt-3">
     <form [formGroup]="cocktailFilterForm" (ngSubmit)="onSubmit()">
         <div class="justify-content-start row">
-
             <div class="form-group m-2 col-md-3">
                 <label for="name">Name</label>
                 <input autocomplete="off" type="text" class="form-control" id="name" formControlName="name"
-                    placeholder="Enter cocktail name">
+                    placeholder="Enter name">
             </div>
-
             <div class="form-group m-2 col-md-3">
                 <label for="cocktailType">Cocktail Type</label>
                 <select class="form-control" id="cocktailType" formControlName="cocktailType" placeholder="Enter cocktail type">
                     <option *ngFor="let ct of cocktailTypeArray" [value]="ct">{{ct}}</option>
-                    <option value="" selected>Select Cocktail Type</option>
+                    <option value="" selected>Select Type</option>
                 </select>
             </div>
 
@@ -22,7 +20,6 @@
                     placeholder="Enter description"></textarea>
             </div>
         </div>
-
     </form>
     <button class="btn btn-primary mt-2" (click)="clearForm()">Clear</button>
 </div>
