--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-details/drink-details.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-details/drink-details.component.html
@@ -1,27 +1,28 @@
 <div *ngIf="drink && brand" class="mt-3">
-    <div class="col">
+    <div class="row justify-content-center">
         <a class="btn btn-primary btn-lg m-2" [routerLink]="['/drinks/edit', drink.id]">Edit Drink</a>
         <a class="btn btn-primary btn-lg m-2" routerLink="/drinks">Back To List</a>
         <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
     </div>
-    <div class="jumbotron jumbotron-fluid mt-2">
+    <div class="jumbotron jumbotron-fluid mt-3">
         <div class="container">
-            <h1 class="display-4">Drink Details</h1>
-            <div class="row">
-                <img *ngIf="drink.photoPath != null" [src]="drink.photoPath" alt="No Img" class="image-limiter col-6" />
-                <div class="col-6">
+            <h4 class="display-4 text-center">Drink</h4>
+            <div class="row justify-content-center">
+                <img *ngIf="drink.photoPath != null" [src]="drink.photoPath" alt="Loading image..." class="col-sm-12 col-md-4" />
+                <div class="col-sm-12 col-md-6">
+                    <p class="text-center mt-2"><strong>Details:</strong></p>
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-secondary"><strong>Name:</strong> {{drink.name}}</li>
-                        <li class="list-group-item list-group-item-secondary"><strong>Type:</strong> {{drink.alcoholType}}</li>
-                        <li class="list-group-item list-group-item-secondary"><strong>Alcohol %:</strong> {{drink.alcoholPercentage}}</li>
-                        <li class="list-group-item list-group-item-secondary"><strong>Brand:</strong> {{drink.brand.name}}</li>
-                        <li class="list-group-item list-group-item-secondary"><strong>Country Of Origin:</strong> {{drink.brand.countryOfOrigin}}</li>
-                        <li class="list-group-item list-group-item-secondary"><strong>Price Per ML:</strong> {{drink.pricePerMl}} UAH</li>
+                        <li class="list-group-item"><strong>Name:</strong> {{drink.name}}</li>
+                        <li class="list-group-item"><strong>Type:</strong> {{drink.alcoholType}}</li>
+                        <li class="list-group-item"><strong>Alcohol %:</strong> {{drink.alcoholPercentage}}</li>
+                        <li class="list-group-item"><strong>Brand:</strong> {{drink.brand.name}}</li>
+                        <li class="list-group-item"><strong>Country Of Origin:</strong> {{drink.brand.countryOfOrigin}}</li>
+                        <li class="list-group-item"><strong>Price Per ML:</strong> {{drink.pricePerMl}} UAH</li>
                     </ul>
                 </div>
             </div>
-          <h4 class="text">Flavor:</h4>
-          <p class="lead">{{drink.flavor}}</p>
+          <h4 class="text-center mt-3">Flavor:</h4>
+          <p class="lead m-3">{{drink.flavor}}</p>
         </div>
       </div>
 </div>
