--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-filter/drink-filter.component.html
@@ -1,17 +1,16 @@
 <div *ngIf="brands" class="mt-3">
     <form [formGroup]="drinkFilterForm" (ngSubmit)="onSubmit()">
         <div class="justify-content-start row">
-
             <div class="form-group m-2 col-md-3">
                 <label for="name">Name</label>
                 <input autocomplete="off" type="text" class="form-control" id="name" formControlName="name"
-                    placeholder="Enter drink name">
+                    placeholder="Enter name">
             </div>
 
             <div class="form-group m-2 col-md-3">
                 <label for="alcoholType">Alcohol Type</label>
                 <input autocomplete="off" type="text" class="form-control" id="alcoholType" list="alcoholTypes"
-                    formControlName="alcoholType" placeholder="Enter alcohol type">
+                    formControlName="alcoholType" placeholder="Enter type">
                 <datalist id="alcoholTypes">
                     <option *ngFor="let alcoholType of alcoholTypesArray" [value]="alcoholType"></option>
                 </datalist>
@@ -20,7 +19,7 @@
             <div class="form-group m-2 col-md-5">
                 <label for="flavor">Flavor (Description)</label>
                 <textarea autocomplete="off" class="form-control" id="flavor" formControlName="flavor"
-                    placeholder="Enter drink flavor"></textarea>
+                    placeholder="Enter flavor"></textarea>
             </div>
         </div>
 
