--- a/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/recommendationSystem/drinks/drink-list/drink-list.component.html
@@ -1,23 +1,25 @@
-<h4 class="text mt-3">Drink List</h4>
-<div class="col">
+<h4 class="text-center mt-3">Drink List</h4>
+<div class="row justify-content-center">
     <a class="btn btn-primary btn-lg m-2" routerLink="/drinks/create">Create Drink</a>
     <a class="btn btn-primary btn-lg m-2" routerLink="/">Back To Home</a>
 </div>
-<div *ngIf="drinks">
+<div *ngIf="drinks" class="mt-3">
     <drink-filter (filterDrinks)="filterDrinks($event)"></drink-filter>
 </div>
-<div *ngIf="drinks" class="row justify-content-start m-3">
-    <div *ngFor="let drink of filteredDrinks" class="col-lg-4 col-md-6 col-sm-12 mt-3">
-        <div class="card text-center">
-            <div *ngIf="drink.photoPath != null">
+<div class="container">
+    <div *ngIf="drinks" class="row justify-content-start mt-3">
+        <div *ngFor="let drink of filteredDrinks" class="col-lg-3 col-md-5 col-sm-7 m-2">
+            <div class="card text-center">
                 <img *ngIf="drink.photoPath != null" class="card-img-top image-limiter" [src]="drink.photoPath"
-                    alt="No image">
-            </div>
-            <h5 class="card-header"><a [routerLink]="['/drinks', drink.id]">{{drink.name}}</a></h5>
-            <div class="card-body">
-                <div class="row justify-content-center">
-                    <a class="btn btn-success m-2" (click)="editDrink(drink.id)">Edit</a>
-                    <button class="btn btn-danger m-2" (click)="deleteDrink(drink)">Delete</button>
+                    alt="Loading picture...">
+                <img *ngIf="drink.photoPath == null" class="card-img-top image-limiter" src="assets/nodrinkimg.jpg"
+                    alt="Loading picture...">
+                <h5 class="card-header"><a [routerLink]="['/drinks', drink.id]">{{drink.name}}</a></h5>
+                <div class="card-body">
+                    <div class="row justify-content-center">
+                        <a class="btn btn-success m-2" (click)="editDrink(drink.id)">Edit</a>
+                        <button class="btn btn-danger m-2" (click)="deleteDrink(drink)">Delete</button>
+                    </div>
                 </div>
             </div>
         </div>
