--- a/BartenderSupportSystem/Server/ClientApp/src/app/shared/image-input/image-input.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/shared/image-input/image-input.component.html
@@ -1,5 +1,5 @@
 <h6 class="text">Photo Path</h6>
-<div class="custom-file mt-1 col-sm-6">
+<div class="custom-file mt-3">
     <input #imageInput type="file" accept="image/*" class="custom-file-input" id="customFile"
         (change)="processFile(imageInput)">
     <label class="custom-file-label" for="customFile">Choose file...</label>
