--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-form/custom-test-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-form/custom-test-form.component.html
@@ -1,4 +1,5 @@
 <div class="mt-3" *ngIf="currentUserIsCreator">
+    <h4 class="text-center">Test Form</h4>
     <p class="text-center text-info">RULESET FOR CREATING TESTS:</p>
     <div class="row justify-content-center">
         <ul class="list-group mb-2">
@@ -7,7 +8,6 @@
             <li class="list-group-item">In every question there must be at least 1 correct answer.</li>
         </ul>
     </div>
-    <h4 class="text-center">Test Form</h4>
     <div class="row justify-content-center">
         <form [formGroup]="customTestForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
@@ -133,7 +133,8 @@
                                 }" class="form-check-input" [id]="'answerStatement'+j"
                                             formControlName="answerIsCorrect" placeholder="Enter statement">
                                     </div>
-                                    <label [attr.for]="'answerIsCorrect'+j" class="form-check-label ml-3">Correct</label>
+                                    <label [attr.for]="'answerIsCorrect'+j"
+                                        class="form-check-label ml-3">Correct</label>
                                 </div>
 
                             </div>
