--- a/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
+++ b/BartenderSupportSystem/Server/ClientApp/src/app/testSystem/custom-test-pass-form/custom-test-pass-form.component.html
@@ -1,1 +1,56 @@
-<p>custom-test-pass-form works!</p>
+<div *ngIf="testToPass" class="mt-3">
+    <h4 class="text-center">Passing the Test</h4>
+    <div class="col justify-content-start mt-2">
+        <div class="row align-items-center">
+            <h6>Name:</h6>
+            <p class="mt-2 ml-2 font-italic">{{testToPass.name}}</p>
+        </div>
+        <div class="row align-items-center">
+            <h6>Topic:</h6>
+            <p class="mt-2 ml-2 font-italic">{{testToPass.topic}}</p>
+        </div>
+        <div class="row align-items-center">
+            <h6>Author:</h6>
+            <p class="mt-2 ml-2 font-italic">{{testToPass.authorUsername}}</p>
+        </div>
+        <div class="row align-items-center">
+            <h6>Description:</h6>
+            <p class="mt-2 ml-2 font-italic">{{testToPass.description}}</p>
+        </div>
+
+        <form [formGroup]="testToPassForm" (ngSubmit)="onSubmit()">
+            <div formArrayName="questions"
+                *ngFor="let question of testToPassForm.get('questions')['controls']; let i = index">
+                <div [formGroupName]="i">
+                    <hr *ngIf="i>0">
+                    <input type="hidden" [id]="'questionId'+i" formControlName="questionId"
+                        [value]="question.get('questionId').value" />
+                    <h4>{{i+1}}. {{question.get('questionStatement').value}}</h4>
+
+                    <div formArrayName="answers"
+                        *ngFor="let answer of testToPassForm.get('questions').at(i).get('answers')['controls']; let j = index">
+                        <div [formGroupName]="j" class="mt-3">
+
+                            <div class="form-row align-items-start mt-3">
+                                <p class="col-6 lead">{{answer.get('answerStatement').value}}</p>
+                                <div class="col-4">
+                                    <div class="form-check">
+                                        <input type="checkbox" [ngClass]="{
+                            'is-valid': answer.get('answerIsCorrect').valid && answer.get('answerIsCorrect').touched,
+                            'is-invalid': answer.get('answerIsCorrect').invalid && answer.get('answerIsCorrect').touched
+                        }" class="form-check-input" [id]="'answerStatement'+j" formControlName="answerIsCorrect"
+                                            placeholder="Enter statement" style="width: 20px; height: 20px;">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-3">
+                <button type="submit" [disabled]="testToPassForm.invalid" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+    <p>{{testToPassForm.value | json}}</p>
+</div>
